Fixing spacing on .sidebar li
Removed 10px bottom margin and padding.

--- a/style.scss
+++ b/style.scss
@@ -1554,8 +1554,8 @@ li.comment {
 
 .sidebar li {
 	/* border-bottom: 1px dotted #ddd; */
-	margin-bottom: 10px;
-	padding-bottom: 10px;
+	/* margin-bottom: 10px;
+	padding-bottom: 10px; */
 }
 
 .sidebar p:last-child,
